@@ -1,3 +1,5 @@
+[2017-07-08 11:29:10 +0200]  Update packages.xml                                                        karasu      {c6ce7a80}
+[2017-07-08 11:27:18 +0200]  Updated deepin packages (again)                                            karasu      {571fa777}
 [2017-07-06 23:27:11 +0200]  Removed package (deepin)                                                   karasu      {105bcdb8}
 [2017-07-06 23:26:38 +0200]  Removed package                                                            karasu      {97b8e7c4}
 [2017-07-06 16:23:12 +0200]  Install tlp by default                                                     karasu      {ebc17b01}
